Enhance the view product endpoint to accept a whole productdto instead of the id only
